# oak

./: .clang-format  CMakeLists.txt  README.md  oak.c  oak.natvis  oak_cli.c  oak_cli.h
include/: oak_bind.h  oak_compiler.h  oak_count_of.h  oak_countof.h  oak_diagnostic.h  oak_file_map.h  oak_json_pretty2.h  oak_lex.h  oak_lexer.h  oak_lexer_status.h  oak_list.h  oak_parser.h  oak_stdlib.h  oak_stdlib_file.h  oak_stdlib_lexer.h  oak_stdlib_parser.h  oak_str.h  oak_test_status.h  oak_token.h  oak_type_id.h  oak_types.h  oak_vm.h
src/: oak_arena.c  oak_arena.h  oak_chunk.c  oak_chunk.h  oak_common.h  oak_compiler.c  oak_file_map.c  oak_lex.c  oak_lex.h  oak_lexer.c  oak_list.h  oak_log.c  oak_log.h  oak_mem.c  oak_mem.h  oak_parser.c  oak_parser.h  oak_refcount.h  oak_tok.c  oak_tok.h  oak_token.c  oak_type.c  oak_type.h  oak_utf8.h  oak_value.c  oak_value.h  oak_vm.c
src/common/: oak_arena.c  oak_arena.h  oak_file_map.c  oak_hash_table.c  oak_hash_table.h  oak_json_pretty2.c  oak_log.c  oak_log.h  oak_mem.c  oak_mem.h  oak_refcount.h
src/compiler/: oak_compiler.c  oak_compiler_builtins.c  oak_compiler_calls.c  oak_compiler_emit.c  oak_compiler_enums.c  oak_compiler_error.c  oak_compiler_expr.c  oak_compiler_functions.c  oak_compiler_internal.h  oak_compiler_records.c  oak_compiler_scope.c  oak_compiler_stmt.c  oak_compiler_structs.c  oak_compiler_types.c
src/lexer/: oak_lexer.c  oak_lexer_buffer.c  oak_lexer_internal.h  oak_lexer_scan_ident.c  oak_lexer_scan_number.c  oak_lexer_scan_op.c  oak_lexer_scan_string.c  oak_lexer_scan_ws.c  oak_token.c
src/parser/: oak_parser.c  oak_parser_ast.c  oak_parser_choice.c  oak_parser_grammar.c  oak_parser_internal.h  oak_parser_pratt.c  oak_parser_rules.c
src/runtime/: oak_bind.c  oak_chunk.c  oak_chunk.h  oak_type.c  oak_type.h  oak_value.c  oak_value.h
src/stdlib/: oak_stdlib.c  oak_stdlib_file.c  oak_stdlib_lexer.c  oak_stdlib_parser.c
src/vm/: oak_vm.c  oak_vm_arith.c  oak_vm_call.c  oak_vm_error.c  oak_vm_internal.h
tests/: 0001_lex_empty.c  0002_lex_integer.c  0003_lex_float.c  0004_lex_arithmetic_expression.c  0005_lex_ident.c  0006_lex_keywords.c  0007_lex_ops.c  0008_lex_string.c  0009_lex_whitespace_newlines.c  0010_lex_float_exponent.c  0011_parse_expression.c  0012_parse_struct_decl.c  0012_parse_type_decl.c  0013_parse_enum_decl.c  test_lex.c
tests/common/: oak_test.h  oak_test_ast.h  oak_test_run.h  oak_test_token.h
tests/lexer/: 0001_lexer_empty.c  0002_lexer_integer.c  0003_lexer_float.c  0004_lexer_arithmetic_expression.c  0005_lexer_ident.c  0006_lexer_keywords.c  0007_lexer_ops.c  0008_lexer_string.c  0009_lexer_whitespace_newlines.c  0010_lexer_float_exponent.c  0011_lexer_unicode.c  lexer_arithmetic_expression.c  lexer_empty.c  lexer_empty_string.c  lexer_float.c  lexer_float_exponent.c  lexer_ident.c  lexer_integer.c  lexer_keywords.c  lexer_ops.c  lexer_string.c  lexer_unicode.c  lexer_whitespace_newlines.c
tests/parser/: 0001_parser_struct_decl.c  0002_parser_enum_decl.c  0003_parser_assignment.c  0004_parser_let_assignment.c  0005_parser_let_assignment.c  0005_parser_multiple_stmts.c  0006_parser_unary_neg.c  0007_parser_unary_not.c  0008_parser_expr_precedence.c  0009_parser_logical.c  0009_parser_subtraction.c  0010_parser_division_modulo.c  0010_parser_parenthesized.c  0011_parser_comparison.c  0012_parser_relational.c  0013_parser_logical.c  0014_parser_parenthesized.c  0015_parser_fn_decl.c  0016_parser_fn_param_mut.c  0017_parser_return_stmt.c  0018_parser_fn_call.c  0019_parser_fn_call_expr.c  0020_parser_if_stmt.c  0021_parser_if_no_else.c  0022_parser_while_stmt.c  0023_parser_while_break_continue.c  0024_parser_compound_assign.c  0025_parser_for_stmt.c  0026_parser_fn_receiver.c  0027_parser_method_call.c  0028_parser_member_access.c  0029_parser_type_array.c  0030_parser_type_map.c  parser_assignment.c  parser_comparison.c  parser_compound_assign.c  parser_division_modulo.c  parser_enum_decl.c  parser_expr_empty_collections.c  parser_expr_precedence.c  (+28 more)
tests/scripts/: arithmetic.expected  arithmetic.oak  arrays.expected  arrays.oak  collatz.oak  control_flow.oak  factor.oak  fibonacci.oak  fizzbuzz.expected  fizzbuzz.oak  fn_mutual_recursion.oak  fn_nested_calls.oak  for_loop.expected  for_loop.oak  function_call.oak  maps.expected  maps.oak  nested_loops.expected  nested_loops.oak  parse.oak  primes.oak  read_text_file.oak  read_text_file_data.txt  records.expected  records.oak  recursion_factorial.oak  sort_bubble.expected  sort_bubble.oak  sort_insertion.expected  sort_insertion.oak  sort_merge.expected  sort_merge.oak  sort_quick.expected  sort_quick.oak  sort_selection.expected  sort_selection.oak  strings.expected  strings.oak  structs.oak  tokenize.expected  (+5 more)
tests/shared/: oak_test.h  oak_test_ast.h  oak_test_run.h  oak_test_tok.h  oak_test_token.h
tests/vm/: compiler_const_mut_binding.c  compiler_enum_access.c  compiler_fn_arg_type.c  compiler_module_scope.c  compiler_native_fn_binding.c  compiler_native_type_binding.c  compiler_type_binding.c  compiler_type_field_binding.c  compiler_void_fn.c  stdlib_file.c  stdlib_lexer.c  stdlib_parser.c  vm_array_basic.c  vm_array_literal.c  (+11 more)
